--- a/frontend/index.html
+++ b/frontend/index.html
@@ -100,6 +100,7 @@
                 <p data-href="/home" class="nLink" id="home">Home</p>
                 <p data-href="/about" class="nLink" id="about">About</p>
                 <p data-href="/posts" class="nLink" id="posts">Posts</p>
+                <p data-href="/shop" class="nLink" id="shop">Shop</p>
                 <p data-href="/post/33" class="nLink" id="">Invalide route
                     example</p>
                 <p data-href="/posts/33" class="nLink" id="">Params example</p>
